testdata/baselines/reference/submodule/compiler/invalidLetInForOfAndForIn_ES6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Iterable'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
invalidLetInForOfAndForIn_ES6.ts(5,13): error TS1005: ',' expected.
invalidLetInForOfAndForIn_ES6.ts(5,13): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
invalidLetInForOfAndForIn_ES6.ts(5,14): error TS1181: Array element destructuring pattern expected.
invalidLetInForOfAndForIn_ES6.ts(5,14): error TS2695: Left side of comma operator is unused and has no side effects.
invalidLetInForOfAndForIn_ES6.ts(5,14): error TS2695: Left side of comma operator is unused and has no side effects.
invalidLetInForOfAndForIn_ES6.ts(5,19): error TS1005: ';' expected.
invalidLetInForOfAndForIn_ES6.ts(5,20): error TS1128: Declaration or statement expected.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Iterable'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== invalidLetInForOfAndForIn_ES6.ts (7 errors) ====
    // This should be an error
    // More details: http://www.ecma-international.org/ecma-262/6.0/#sec-iteration-statements
    
    var let = 10;
    for (let of [1,2,3]) {}
                ~
!!! error TS1005: ',' expected.
                ~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
                 ~
!!! error TS1181: Array element destructuring pattern expected.
                 ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                 ~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                      ~
!!! error TS1005: ';' expected.
                       ~
!!! error TS1128: Declaration or statement expected.
    
    for (let in [1,2,3]) {}
     
    
    